crates/baml-bridge-derive/tests/ui/nested_invalid_template.rs
use baml_bridge_derive::BamlType;

#[derive(BamlType)]
struct NestedBadTemplate {
    #[render(template = "{{ value")]
    content: String,
}

fn main() {}
